[package]
name = "hot_dog"
version = "0.1.0"
authors = ["Niyki <73833601+Niyki@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0", features = ["fullstack", "router"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }
serde_json = { version = "1.0.145" }
anyhow = { version = "1.0.100" }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite"]
